Fixing color bleeding when the canvas is stretched.

When the canvas is stretched by zooming the browser window,
the interpolation filter may cause color bleeding. We fix this
by half-pixel padding before paint invalidation when necessary.

BUG=654700

Review-Url: https://codereview.chromium.org/2438313002
Cr-Commit-Position: refs/heads/master@{#427382}

Former-commit-id: 4bdb40f764d2fc3ac7f4e34da68424e84b89968f